css/JSAV.css
/* ... */
.jsavcenter {
  margin-left: auto;
  margin-right: auto;
}

.jsavarray, .jsavlabel, .jsavcode, .jsavlist, .jsavtree, .jsavgraph, .jsavmatrix {
  margin-top: 1em;
  margin-bottom: 1em;
}
.jsavhighlight, .jsavarray.jsavbararray .jsavindex.jsavhighlight .jsavvalue, .jsavvariable.jsavhighlight .jsavvalue {
  background-color: yellow !important;
  color: black !important;
}

.jsavvalue {
  /* FF doesn't respect 100% here when using display: table so have to fix the height */
  height: 45px;
  width: 100%;
  min-height: inherit;
  min-width: inherit;
  background-color: transparent;
  display: table;
  border-radius: inherit;
}

.jsavvaluelabel {
  display: table-cell;
  vertical-align: middle;
}

.jsavautoresize .jsavnode {
  width: auto;
  min-width: 45px;
  height: auto;
  min-height: 45px;
}

/***** STYLING OF THE ARRAY DATA STRUCTURE *****/
.jsavarray {
  position: relative;
  list-style: none;
  min-height: 50px;
  padding: 0;
  clear:both;
  -webkit-transform-style: preserve-3d;
}
.jsavarray * {
  -webkit-transform-style: preserve-3d;
}
.jsavarray:after {
  content: "";
  clear: both;
  display: block;
}
.jsavindexlabel {
  width: 100%;
  height: 20px;
  line-height: 20px;
  color: black;
  position: absolute;
  vertical-align: middle;
}
.jsavindex {
  box-sizing: border-box;
}
.jsavindex span {
  z-index: 99;
}
.jsavhorizontalarray .jsavindex {
  display: inline-block;
  position: relative;
}
/* remove right borders from everything but the last index */
.jsavhorizontalarray .jsavindex:not(:last-of-type) {
  border-right: none;
}
.jsavhorizontalarray .jsavindexlabel {
  bottom: -25px;
  left: 0;
}
.jsavhorizontalarray .jsavindex:first-of-type {
  -ms-border-top-left-radius: 8px;
  -ms-border-bottom-left-radius: 8px;
  -moz-border-top-left-radius: 8px;
  -moz-border-bottom-left-radius: 8px;
  -o-border-top-left-radius: 8px;
  -o-border-bottom-left-radius: 8px;
  -webkit-border-top-left-radius: 8px;
  -webkit-border-bottom-left-radius: 8px;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}
.jsavhorizontalarray .jsavindex:last-of-type {
  -ms-border-top-right-radius: 8px;
  -ms-border-bottom-right-radius: 8px;
  -moz-border-top-right-radius: 8px;
  -moz-border-bottom-right-radius: 8px;
  -o-border-top-right-radius: 8px;
  -o-border-bottom-right-radius: 8px;
  -webkit-border-top-right-radius: 8px;
  -webkit-border-bottom-right-radius: 8px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.jsavbararray {
  height: 150px;
  overflow: visible;
  padding-bottom: 30px;
}
.jsavbararray .jsavnode {
  /* remove shadow from the white bars */
  box-shadow: none;
} 
.jsavbararray .jsavindex {
  height: 100%;
  vertical-align: bottom;
  border: none;
  background-color: #ddd;
  margin-left: 2px;
  float: left;
  position: relative;
}
.jsavbararray .jsavvalue {
  z-index: 100;
  bottom: 0;
  background-color: inherit;
  min-height: 0;
  -moz-border-radius: 0;
  -o-border-radius: 0;
  -ms-border-radius: 0;
  -webkit-border-radius: 0;
  border-radius: 0;
  /* add a subtle shadow to bars */
  box-shadow: 2px 2px 5px rgba(120, 120, 120, 0.5);
}
.jsavbararray .jsavvalue span {
  position: absolute;
  width: inherit;
  bottom: 0;
  left: 0;
}
.jsavbararray .jsavvalue, .jsavbararray .jsavvaluebar {
  display: block;
  padding: 0;
  position: absolute;
  width: 100%;
}
.jsavbararray .jsavvaluebar {
  height: 100%;
  top: 0;
  background-color: #fff;
}
.jsavbararray .jsavindexlabel {
  font-size: 90%;
  position: relative;
  top: 100%;
	vertical-align: middle;
}

/* vertical array */
.jsavverticalarray.jsavindexed .jsavindex {
  position: relative;
}
.jsavverticalarray .jsavindex {
  margin-bottom: -1px;
  float: left;
  clear: left;
}
.jsavverticalarray .jsavindexlabel {
  position: absolute;
  text-align: right;
  width: auto;
  left: -17px;
}
.jsavverticalarray .jsavindex:first-of-type, .jsavverticalarray .jsavindex:first-of-type .jsavvalue {
  -ms-border-top-left-radius: 8px;
  -moz-border-top-left-radius: 8px;
  -o-border-top-left-radius: 8px;
  -webkit-border-top-left-radius: 8px;
  border-top-left-radius: 8px;
  -ms-border-top-right-radius: 8px;
  -moz-border-top-right-radius: 8px;
  -o-border-top-right-radius: 8px;
  -webkit-border-top-right-radius: 8px;
  border-top-right-radius: 8px;
}
.jsavverticalarray .jsavindex:last-of-type, .jsavverticalarray .jsavindex:last-of-type .jsavvalue {
  -ms-border-bottom-left-radius: 8px;
  -moz-border-bottom-left-radius: 8px;
  -o-border-bottom-left-radius: 8px;
  -webkit-border-bottom-left-radius: 8px;
  border-bottom-left-radius: 8px;
  -ms-border-bottom-right-radius: 8px;
  -moz-border-bottom-right-radius: 8px;
  -o-border-bottom-right-radius: 8px;
  -webkit-border-bottom-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

/* bar array marker line */
.jsavmark {
  position: absolute;
  display: none;
  background-color: #FF6464;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;
  border-radius: 10px;
  width: 8px;
  height: 8px;
  z-index: 190;
}
.jsavmarkline {
  position: absolute;
  display: none;
  height:1px;
  background-color: #FF6464;
  background-color: rgba(255, 100, 100, 0.6);
  z-index: 190;
}

/***** END STYLING OF THE ARRAY DATA STRUCTURE *****/

/*** OUTPUT STYLING ***/
.jsavline {
  overflow: visible;
  border: none;
  background-color: inherit;
  height:50px;
}
.jsavscroll {
  overflow: auto; 
  background-color: white; 
  border: 1px solid black;
  height:220px;
}
.jsavoutput .jsavtitle {
  display:block;
  margin-top:2.5em;
  font-size:300%;
  text-align:center;
}

.jsavindex.jsavarrow:before {
  content: "";
  background-color: transparent;
  position: absolute;
  width: 0;
  height: 0;
  border: 6px solid transparent;
  border-top: 6px solid black;
  top: -10px;
  left: 17px;
}

/**** END OUTPUT STYLING ***/

.jsavcanvas svg {
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 110;
}
/* ... */

